[package]
name = "kryptos"
version = "0.3.0"
authors = ["StackCrash <derek@itsecguy.com>"]
repository = "https://github.com/StackCrash/kryptos.git"
homepage = "https://github.com/StackCrash/kryptos"
license = "MIT"
readme = "README.md"
documentation = "https://stackcrash.github.io/kryptos"
description = "A Rust implementation of various older, insecure, cryptrographic ciphers."

[dependencies]
