[package]
name = "kryptos"
version = "0.6.1"
authors = ["StackCrash <derek@itsecguy.com>"]
repository = "https://github.com/StackCrash/kryptos.git"
homepage = "https://github.com/StackCrash/kryptos"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/kryptos"
description = "A Rust implementation of various older, insecure, cryptographic ciphers."

[dependencies]
regex = "1.0.0"